# no-crt-cmake

./: .clang-format  CMakeLists.txt  README.md  main.cpp
